adding thank you page

--- a/WebPizzaApp/Pages/Index.cshtml
+++ b/WebPizzaApp/Pages/Index.cshtml
@@ -12,6 +12,6 @@
 
     <img class="mainImage" src="~/images/AccE.jpg" />
     <br/>
-    <a class="btn btn-outline-warning mt-1" asp-area="" asp-page="Checkout/ThankYou">BRING ME THAT PIZZA</a>
+    <a class="btn btn-outline-warning mt-1" asp-area="" asp-page="Pizza">GET ME THAT PIZZA</a>
 
 </div>
