--- a/WebPizzaApp/Pages/Pizza.cshtml
+++ b/WebPizzaApp/Pages/Pizza.cshtml
@@ -38,10 +38,10 @@
                 <div class="col-4 mb-5">
                  
 
-                     <img src="@imagePath" class="w-100" asp-append-version="true" />
-                     <a class="btn btn-primary mt-1" asp-area="" asp-page="Checkout/Checkout"
-                        asp-route-ImageTitle="@pizza.ImageTitle"
-                        asp-route-PizzaPrice="@pizza.FinalPrice">Get this Pizza!</a>
+                     <a class="pizza-img"  asp-area="" asp-page="Checkout/Checkout" asp-route-ImageTitle="@pizza.ImageTitle"
+                        asp-route-PizzaPrice="@pizza.FinalPrice">                    
+                        <img src="@imagePath" class="w-100" asp-append-version="true" />
+                     </a>
                      <br />
 
                  </div>
