--- a/WebPizzaApp/Pages/Shared/_Layout.cshtml
+++ b/WebPizzaApp/Pages/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-page="/Pizza">Pizzas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-page="/Privacy">Privacy</a>
+                            <a class="nav-link text-dark" asp-area="" asp-page="/Orders">Orders</a>
                         </li>
                     </ul>
                 </div>
@@ -40,9 +40,7 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2022 - AcePizzaDelivery - <a asp-area="" asp-page="/Privacy">Privacy</a>
-        </div>
+      
     </footer>
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
